Regression: bpy.ops.wm.append can't run correct in blender 3.4 #102914

Closed
opened 2022-12-02 10:03:05 +01:00 by czf · 19 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.4.0 Release Candidate, branch: blender-v3.4-release, commit date: 2022-12-01 14:21, hash: f95768d1e0
Worked: (newest version of Blender that worked as expected)

Caused by 8f7ab1bf46

Short description of error
when I use python to execute the following code:
bpy.ops.wm.append(filepath='c:/140/d10.blend/Collection/Collection', filename='Collection',directory='c:/140/d10.blend/Collection/')
blender 3.2/3.3 can import content to scene collection, but blender3.4 can't get the same result

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
1 run blender 3.4.
2 switch to python console.
3 run the python code: bpy.ops.wm.append(filepath='c:/140/d10.blend/Collection/Collection', filename='Collection',directory='c:/140/d10.blend/Collection/') please change path of blend file.
4 blender prompt "finished",but nothing insert into blender.
d10.blend
3.4.jpg

3.2.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.4.0 Release Candidate, branch: blender-v3.4-release, commit date: 2022-12-01 14:21, hash: `f95768d1e0` Worked: (newest version of Blender that worked as expected) Caused by 8f7ab1bf46 **Short description of error** when I use python to execute the following code: bpy.ops.wm.append(filepath='c:/140/d10.blend/Collection/Collection', filename='Collection',directory='c:/140/d10.blend/Collection/') blender 3.2/3.3 can import content to scene collection, but blender3.4 can't get the same result **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] 1 run blender 3.4. 2 switch to python console. 3 run the python code: bpy.ops.wm.append(filepath='c:/140/d10.blend/Collection/Collection', filename='Collection',directory='c:/140/d10.blend/Collection/') please change path of blend file. 4 blender prompt "finished",but nothing insert into blender. [d10.blend](https://archive.blender.org/developer/F13985367/d10.blend) ![3.4.jpg](https://archive.blender.org/developer/F13985370/3.4.jpg) ![3.2.jpg](https://archive.blender.org/developer/F13985369/3.2.jpg)
Author

Added subscriber: @maskerman

Added subscriber: @maskerman
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Cant repro on linux here

**System Information**
Operating system: Linux-6.0.5-200.fc36.x86_64-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 520.56.06
version: 3.4.0 Release Candidate, branch: blender-v3.4-release, commit date: 2022-12-01 14:21, hash: `rBf95768d1e07b`
Cant repro on linux here ``` **System Information** Operating system: Linux-6.0.5-200.fc36.x86_64-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 520.56.06 version: 3.4.0 Release Candidate, branch: blender-v3.4-release, commit date: 2022-12-01 14:21, hash: `rBf95768d1e07b` ```
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm on windows. Checking when it was changed

I can confirm on windows. Checking when it was changed
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

git bisect pointed to 8f7ab1bf46
@ideasman42 ^

git bisect pointed to 8f7ab1bf46 @ideasman42 ^
Member

Hm, @ideasman42 is on holiday afaik, but this should be High prio for 3.4?

Or does the same thing work with backward slashes?
Or with just the last slash stripped from directory='c:/140/d10.blend/Collection/'?

Hm, @ideasman42 is on holiday afaik, but this should be High prio for 3.4? Or does the same thing work with backward slashes? Or with just the last slash stripped from `directory='c:/140/d10.blend/Collection/'`?
Philipp Oeser changed title from bpy.ops.wm.append can't run correct in blender 3.4 to Regression: bpy.ops.wm.append can't run correct in blender 3.4 2022-12-02 14:39:25 +01:00
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

This is on Windows, so this would be correct and should work.

bpy.ops.wm.append(filepath="c:\\140\\d10.blend\\Collection\\Collection", filename="Collection",directory="c:\\140\\d10.blend\\Collection\\")
This is on Windows, so this would be correct and should work. ``` bpy.ops.wm.append(filepath="c:\\140\\d10.blend\\Collection\\Collection", filename="Collection",directory="c:\\140\\d10.blend\\Collection\\") ```
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Wouldn't consider this a UI issue, since this is the actual link/append code/operator that's broken. It's invoked via .py even, not the UI.

Wouldn't consider this a UI issue, since this is the actual link/append code/operator that's broken. It's invoked via .py even, not the UI.
Member

Was is possible to use forwardslashes in 3.3 on Windows? Then the minimum is to document this properly.

Was is possible to use forwardslashes in 3.3 on Windows? Then the minimum is to document this properly.
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

On Windows we have been able to use either slash in paths like this. I think we should at least consider reverting 8f7ab1bf46. Any thoughts @LazyDodo ?

On Windows we have been able to use **either** slash in paths like this. I think we should at least consider reverting 8f7ab1bf46. Any thoughts @LazyDodo ?
Member

Seems a little arbitrary to suddenly stop allowing this, 8f7ab1bf46 doesn't seem to indicate if this is fixing a bug somewhere and if so what it was. Without that information i'm unable to make an educated call for a revert, i'd like to hear from @ideasman42 first.

Seems a little arbitrary to suddenly stop allowing this, 8f7ab1bf46 doesn't seem to indicate if this is fixing a bug somewhere and if so what it was. Without that information i'm unable to make an educated call for a revert, i'd like to hear from @ideasman42 first.

This issue was referenced by a16ef95ff6

This issue was referenced by a16ef95ff6ce617009c942264c64c7214c6e9eb7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-12-06 03:13:44 +01:00
Thomas Dinges added this to the 3.4 milestone 2023-02-07 19:01:34 +01:00
Bastien Montagne added this to the Core project 2023-02-09 15:43:10 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102914
No description provided.