Fix T102914: bpy.ops.wm.append no longer supports / in paths for  WIN32

Support both forward and back slashes on WIN32.

Forward slashes for paths in WIN32 was removed in [0] (for BLI_path_join)
& [1] (for BLI_path_name_at_index), this is correct on UNIX as back
slashes can be used in paths but not on WIN32 which can use both.

Note that other path functions such as BLI_path_append &
BLI_path_slash_ensure should be updated too, but this is out of scope
for a bug-fix.

Documenting and ensuring Windows path handling functions all handle
forward slashes can be done separately.

[0]: 8f7ab1bf46d5e8610b167180b7631ff62e718a08
[1]: 511ae2226473df57e47b439392da387cd355abef

Reviewed By: harley

Ref D16700